Modernize for Java 25: replace deprecated APIs, shade-plugin, JUnit 5
- Replace deprecated java.net.URL constructors, javax.security.cert.*,
  XMLReaderFactory, X509CRL#getIssuerDN, and Locale constructors across
  42 call sites (main + test) with their non-deprecated equivalents.
  No public/protected method signatures changed.
- Switch packaging from maven-assembly-plugin to maven-shade-plugin so
  META-INF/services providers from multiple dependencies are merged
  instead of silently overwritten, and the Multi-Release manifest flag
  is preserved on the shaded jar.
- Migrate the test suite from JUnit 4 to JUnit 5 (Jupiter), including
  lifecycle annotations and message-argument reordering for assertions.
- Replace jakarta.xml.bind-api's DatatypeConverter.printHexBinary with
  java.util.HexFormat and drop the now-unused JAXB dependencies.

Verified via `mvn clean verify`: 614 tests pass, 0 javac -Xlint
deprecation/removal warnings, uber jar's META-INF/services and
Multi-Release manifest entry confirmed by inspection, dependency:tree
free of junit 4 and jakarta.xml.bind.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>